//
//  AccessibilityIdentifier.swift
//  CleanArchitectureMVVM
//
//  Created by 김건우 on 11/20/24.
//

import Foundation

struct AccessibilityIdentifier {
    static let movieDetailsView = "AccessibilityIdentifierMovieDetailsView"
    static let searchField = "AccessibilityIdentifierSearchMovie"
}
